force-app/main/default/objects/DevOps_User_Story__c/DevOps_User_Story__c.object-meta.xml
<CustomObject>
    <description>Central DevOps tracking record. Feature_ID__c is the join key to Git branch feature/&lt;id&gt;.</description>
    <label>DevOps User Story</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>User Story ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DevOps User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>