force-app/main/default/objects/DevOps_User_Story__c/fields/Commit_Count__c.field-meta.xml
<CustomField>
    <fullName>Commit_Count__c</fullName>
    <label>Commit Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>