force-app/main/default/objects/DevOps_User_Story__c/fields/Current_Environment__c.field-meta.xml
<CustomField>
    <fullName>Current_Environment__c</fullName>
    <label>Current Environment</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>