force-app/main/default/objects/DevOps_User_Story__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <label>Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>DevOps User Stories</relationshipLabel>
    <relationshipName>DevOps_User_Stories</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>