force-app/main/default/objects/DevOps_User_Story__c/fields/Feature_Branch__c.field-meta.xml
<CustomField>
    <fullName>Feature_Branch__c</fullName>
    <label>Feature Branch</label>
    <description>The developer's actual Git branch, whatever they named it. This is the join key: PRs and commits are found by querying GitHub for this head branch.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>