force-app/main/default/objects/DevOps_User_Story__c/fields/Feature_ID__c.field-meta.xml
<CustomField>
    <fullName>Feature_ID__c</fullName>
    <externalId>true</externalId>
    <unique>true</unique>
    <label>Feature ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>