force-app/main/default/objects/DevOps_User_Story__c/fields/Last_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Last_Deployment__c</fullName>
    <label>Last Deployment</label>
    <type>DateTime</type>
</CustomField>