force-app/main/default/objects/DevOps_User_Story__c/fields/Latest_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Commit_Date__c</fullName>
    <label>Latest Commit Date</label>
    <type>DateTime</type>
</CustomField>