force-app/main/default/objects/DevOps_User_Story__c/fields/Latest_Commit_Message__c.field-meta.xml
<CustomField>
    <fullName>Latest_Commit_Message__c</fullName>
    <label>Latest Commit Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>