force-app/main/default/objects/DevOps_User_Story__c/fields/Latest_Commit_SHA__c.field-meta.xml
<CustomField>
    <fullName>Latest_Commit_SHA__c</fullName>
    <label>Latest Commit SHA</label>
    <length>40</length>
    <type>Text</type>
</CustomField>