force-app/main/default/objects/DevOps_User_Story__c/fields/PR_Status__c.field-meta.xml
<CustomField>
    <fullName>PR_Status__c</fullName>
    <label>PR Status</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Changes Requested</fullName>
                </value>
                <value>
                    <fullName>Merged</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>