force-app/main/default/objects/DevOps_User_Story__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <label>Repository</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>